# FriendSearchService

./: Dockerfile  README.md  ServiceFriend.postman_collection.json  docker-compose.yaml  makefile  openapi-schema.yml  pyproject.toml
.github/workflows/: python-app.yml
FriendSearchService/: db.sqlite3  manage.py
FriendSearchService/FriendSearchService/: asgi.py  settings.py  urls.py  wsgi.py
FriendSearchService/friend/: admin.py  models.py  serializers.py  views.py
FriendSearchService/friend/migrations/: 0001_initial.py  0002_alter_friendrequest_unique_together.py  0002_friendship_user_id_2_remove_friendship_user_id_1_and_more.py  0003_alter_friendrequest_status.py  0003_alter_user_id.py  0004_alter_friendrequest_status.py  0005_alter_friendrequest_status.py
