[tool.poetry]
name = "friendsearchservice"
version = "0.1.0"
description = ""
authors = ["allozo <allozo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
isort = "^5.12.0"
black = "^23.3.0"
autoflake = "^2.1.1"
unify = "^0.5"
flake8 = "^6.0.0"
pylint = "^2.17.4"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
